--- a/content/resources/17-267f13-th.md
+++ b/content/resources/17-267f13-th.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: A 2013 rally in front of the Supreme Court as justices were hearing cases
   on the Voting Rights Act. Image courtesy of SEIU on flickr. CC BY-NC-SA.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/17-267-democracy-in-america-fall-2013/48d78a1f706dcc9d5126c44ae0f94d29_17-267f13-th.jpg
+file: /media/courses/17-267-democracy-in-america-fall-2013/48d78a1f706dcc9d5126c44ae0f94d29_17-267f13-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A 2013 rally in front of the Supreme Court as justices were hearing cases
@@ -12,6 +12,8 @@ image_metadata:
   credit: Image courtesy of SEIU on flickr. CC BY-NC-SA.
   image-alt: A hand holds a poster with the words "Protect My Vote" in front of the
     U.S. Supreme Court building.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 17-267f13-th.jpg
 uid: 48d78a1f-706d-cc9d-5126-c44ae0f94d29
