Sync all content

--- a/content/resources/17-267f13-th.md
+++ b/content/resources/17-267f13-th.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: A 2013 rally in front of the Supreme Court as justices were hearing cases
   on the Voting Rights Act. Image courtesy of SEIU on flickr. CC BY-NC-SA.
-file: /media/courses/17-267-democracy-in-america-fall-2013/48d78a1f706dcc9d5126c44ae0f94d29_17-267f13-th.jpg
+file: /courses/17-267-democracy-in-america-fall-2013/48d78a1f706dcc9d5126c44ae0f94d29_17-267f13-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A 2013 rally in front of the Supreme Court as justices were hearing cases
@@ -18,3 +18,5 @@ resourcetype: Image
 title: 17-267f13-th.jpg
 uid: 48d78a1f-706d-cc9d-5126-c44ae0f94d29
 ---
+A 2013 rally in front of the Supreme Court as justices were hearing cases on the Voting Rights Act. Image courtesy of SEIU on flickr. CC BY-NC-SA.
+
