--- a/content/resources/17-267f13.md
+++ b/content/resources/17-267f13.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: A 2013 rally in front of the Supreme Court as justices were hearing cases
   on the Voting Rights Act. Image courtesy of SEIU on flickr. CC BY-NC-SA.
-file: /media/courses/17-267-democracy-in-america-fall-2013/5c1c6b9fd79db548457007ba9e4b2dd6_17-267f13.jpg
+file: /courses/17-267-democracy-in-america-fall-2013/5c1c6b9fd79db548457007ba9e4b2dd6_17-267f13.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A 2013 rally in front of the Supreme Court as justices were hearing cases
@@ -18,3 +18,5 @@ resourcetype: Image
 title: 17-267f13.jpg
 uid: 5c1c6b9f-d79d-b548-4570-07ba9e4b2dd6
 ---
+A 2013 rally in front of the Supreme Court as justices were hearing cases on the Voting Rights Act. Image courtesy of SEIU on flickr. CC BY-NC-SA.
+
