Sync all content

--- a/content/resources/17-267f13-th.md
+++ b/content/resources/17-267f13-th.md
@@ -13,10 +13,10 @@ image_metadata:
   image-alt: A hand holds a poster with the words "Protect My Vote" in front of the
     U.S. Supreme Court building.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 17-267f13-th.jpg
 uid: 48d78a1f-706d-cc9d-5126-c44ae0f94d29
 ---
 A 2013 rally in front of the Supreme Court as justices were hearing cases on the Voting Rights Act. Image courtesy of SEIU on flickr. CC BY-NC-SA.
-
