--- a/content/resources/17-267f13.md
+++ b/content/resources/17-267f13.md
@@ -13,10 +13,10 @@ image_metadata:
   image-alt: A hand holds a poster with the words "Protect My Vote" in front of the
     U.S. Supreme Court building.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 17-267f13.jpg
 uid: 5c1c6b9f-d79d-b548-4570-07ba9e4b2dd6
 ---
 A 2013 rally in front of the Supreme Court as justices were hearing cases on the Voting Rights Act. Image courtesy of SEIU on flickr. CC BY-NC-SA.
-
