--- a/content/resources/17-267f13-th.md
+++ b/content/resources/17-267f13-th.md
@@ -2,7 +2,8 @@
 content_type: resource
 description: A 2013 rally in front of the Supreme Court as justices were hearing cases
   on the Voting Rights Act. Image courtesy of SEIU on flickr. CC BY-NC-SA.
-file: /courses/17-267-democracy-in-america-fall-2013/48d78a1f706dcc9d5126c44ae0f94d29_17-267f13-th.jpg
+file: /ol-ocw-studio-app/courses/17-267-democracy-in-america-fall-2013/48d78a1f706dcc9d5126c44ae0f94d29_17-267f13-th.jpg
+file_size: 6373
 file_type: image/jpeg
 image_metadata:
   caption: A 2013 rally in front of the Supreme Court as justices were hearing cases
