--- a/content/resources/17-267f13.md
+++ b/content/resources/17-267f13.md
@@ -2,7 +2,8 @@
 content_type: resource
 description: A 2013 rally in front of the Supreme Court as justices were hearing cases
   on the Voting Rights Act. Image courtesy of SEIU on flickr. CC BY-NC-SA.
-file: /courses/17-267-democracy-in-america-fall-2013/5c1c6b9fd79db548457007ba9e4b2dd6_17-267f13.jpg
+file: /ol-ocw-studio-app/courses/17-267-democracy-in-america-fall-2013/5c1c6b9fd79db548457007ba9e4b2dd6_17-267f13.jpg
+file_size: 64124
 file_type: image/jpeg
 image_metadata:
   caption: A 2013 rally in front of the Supreme Court as justices were hearing cases
